# bam-v2

./: .gitignore  README.md  instance.example.toml  pyproject.toml
.github/workflows/: ci.yml  local-first.yml
bam/: __init__.py  airtable.py  cli.py  config.py  db.py  errors.py  instance.py  models.py  request_types.py  schemas.py  validation.py
bam/api/: __init__.py  main.py
bam/services/: admin.py  airtable_import.py  analytics.py  browse.py  checkin.py  consolidate.py  count_closed.py  dedupe.py  expiration.py  geocoding.py  intake.py  mailjet.py  merge.py  metrics.py  olc.py  outreach.py  privacy.py  snapshot.py
bam/sms/: __init__.py  base.py  console.py  dialpad_provider.py  twilio_provider.py
bam/web/: api.js  app.js  index.html  styles.css
docs/: AUTOMATION-COVERAGE.md  CONTRACT.md  SPEC-GAPS.md  SPEC-MAPPING.md  slideshow.html
docs/spec/: appendix.md  background-current-system.md  bam-mutual-aid-spec.md  platform-research-summary.md
local-first/: README.md  package-lock.json  package.json  qr-e2e.mjs  tsconfig.json  verify-browser.mjs  vite.config.ts  vite.singlefile.config.ts  vitest.config.ts
local-first/docs/: deployment-plan.html
local-first/src/: catalog.json  cli.ts  import.ts  roster-view.ts  roster.ts  (+3 more)
tests/: conftest.py  test_airtable_import.py  test_api.py  test_automations.py  test_browse.py  test_checkin.py  test_checkin_timeout.py  test_dialpad_provider.py  test_expiration_privacy.py  test_geocoding.py  test_instance.py  test_intake.py  test_language_routing.py  test_metrics.py  test_outreach.py  test_validation.py  test_web.py
(+47 files in other folders)
