[project]
name = "bam-v2"
version = "0.1.0"
description = "BAM Mutual Aid System V2 — reference implementation of the intake, outreach, check-in, and expiration flows"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "sqlmodel>=0.0.16",
    "phonenumbers>=8.13",
    "email-validator>=2.1",
]

[project.optional-dependencies]
twilio = ["twilio>=9.0"]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[project.scripts]
bam = "bam.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bam"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
